# llm-text-processor

./: .coverage  .coverage.EdMacBook.68989.XxvnXAvx  .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  MANIFEST.in  README.md  debug_app.py  debug_import.py  docker-compose.yml  docker-run.sh  install.sh  pyproject.toml  pytest.ini  rename_script.py  requirements.txt  run_tests.py  setup.py  test_docs_processor.py  textcleaner
Formula/: textcleaner.rb
cleaned_files/: 100renewableenergyresearchgroupanu_main.md  AssociationOfMiningAndExplorationCompaniesInc_att3.md  Australiancounciloftradeunionsactu_main.md  Australianelectricvehicleassociation_main.md  Australianelectricvehicleassociationvictorianbranch_main.md  Australianlogisticscouncil_main.md  Australianproductivitycouncil_main.md  Ceemunsw_main.md  Cityofadelaide_main.md  Departmentofindustryinnovationandscience_main.md  Drjamesprest_main.md  EnergyNetworksAustralia_att3.md  Grattaninstitute_main.md  Hydrogenmobilityaustralia_main.md  InfrastructureVictoria_att2.md  InfrastructureVictoria_att3.md  Mrphilbrowne_main.md  Municipalassociationofvictoriamav_main.md  Southaustraliangovernment_main.md  Tesla_main.md  Theaustraliainstitute_main.md  Toyotaaustralia_main.md  Transportfornsw_main.md  Unitiaustraliaptyltd_main.md  Woodsideenergy_main.md  results.md
homebrew/: README.md  textcleaner.rb
homebrew-formula/: textcleaner.rb
processed_files/: 1. Household income and income distribution, Australia.md  100renewableenergyresearchgroupanu_main.md  1936-mdbed-project-proposal.md  2024-25-pre-budget-submission-ada-25-jan-2024.md  Argo.md  AssociationOfMiningAndExplorationCompaniesInc_att3.md  Australiancounciloftradeunionsactu_main.md  Australianelectricvehicleassociation_main.md  Australianelectricvehicleassociationvictorianbranch_main.md  Australianlogisticscouncil_main.md  Australianproductivitycouncil_main.md  Ceemunsw_main.md  Cityofadelaide_main.md  Departmentofindustryinnovationandscience_main.md  Drjamesprest_main.md  EnergyNetworksAustralia_att3.md  Grattaninstitute_main.md  Hydrogenmobilityaustralia_main.md  InfrastructureVictoria_att2.md  InfrastructureVictoria_att3.md  Mrphilbrowne_main.md  Municipalassociationofvictoriamav_main.md  Southaustraliangovernment_main.md  Tesla_main.md  Theaustraliainstitute_main.md  Toyotaaustralia_main.md  Transportfornsw_main.md  Unitiaustraliaptyltd_main.md  Woodsideenergy_main.md  complex_webpage.md  pie-chart.md
test_docs/: Baby Contract.docx  Backup-codes-ed.miller.txt  Balance sheet template.xlsx  Climate200_Extracted_Tables.xlsx  GetUp.paint  Issues w_ NW.docx  Lyne Policies.docx  ONU Budget - Draft - EM 030325.xlsx  Profit and loss statement template xls.xlsx  Total Cost of Ownership.docx  pie-chart.txt  token_count.py  (+1 more)
(+156 files in other folders)
