[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textcleaner"
version = "0.5.7"
description = "A tool for converting various file formats to clean, LLM-friendly text"
readme = "README.md"
authors = [
    {name = "emil7051", email = "emh.miller@me.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.8"
dependencies = [
    "pypdf>=3.15.1",
    "pdfminer.six>=20220524",
    "python-docx>=0.8.11",
    "openpyxl>=3.0.10",
    "python-pptx>=0.6.21",
    "pandas>=1.5.0",
    "beautifulsoup4>=4.11.1",
    "nltk>=3.7",
    "pyyaml>=6.0",
    "click>=8.1.3",
    "tqdm>=4.64.1",
    "xlrd>=2.0.1",
    "lxml>=4.9.1",
    "requests>=2.28.1",
    "regex>=2022.3.15",
    "psutil>=5.9.0",
    "tiktoken>=0.4.0",
    "markdown-it-py>=3.0.0",
    "bleach>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit",
    "hypothesis",
]

[project.urls]
Homepage = "https://github.com/emil7051/textcleaner"

[project.scripts]
textcleaner = "textcleaner.cli.commands:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["textcleaner*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = ["py38"]
